--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,23 @@
             <!--<scope>provided</scope>-->
             <version>2.3.1.RELEASE</version>
         </dependency>
+
+        <!-- Swagger 2 Docs -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
