--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
   
 ### Context root ########
-server.servlet.contextPath=/spring-app
+server.servlet.contextPath=/lojas-center
 
 spring.datasource.url=jdbc:mysql://localhost:3306/loja_center?serverTimezone=UTC
 spring.datasource.username=root
